--- a/entrega_05/index.html
+++ b/entrega_05/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <title>K-ERA</title>
-        
+        <link rel="icon" href="imagenes/LOGO.png" type="image/png">
         <link rel="stylesheet" href= "estilo.css">
     </head>
 
     <body>
+        <div class=""
 
     </body>
 </html>
