--- a/entrega_05/index.html
+++ b/entrega_05/index.html
@@ -2,13 +2,19 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, inicial-scale=1.0">
         <title>K-ERA</title>
         <link rel="icon" href="imagenes/LOGO.png" type="image/png">
         <link rel="stylesheet" href= "estilo.css">
+        <style> 
+        body {
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            background-color: #ededed;
+        }
     </head>
 
     <body>
-        <div class=""
-
+        <div class
+    
     </body>
 </html>
