--- a/entrega_05/index.html
+++ b/entrega_05/index.html
@@ -12,8 +12,19 @@
     <body>
         <header>
            <img src="imagenes/LOGO.png">
+           <nav>
+            <ul class="menu">
+                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#historia">Historia</a></li>
+                <li><a href="#expansion">Expansión</a></li>
+                <li><a href="#generaciones">Generaciones</a></li>
+                <li><a href="#precios">Precios</a></li>
+                <li><a href="#expectativas">Expectativas</a></li>
+                <li><input type="text" placeholder="Buscar..." class="search-box"></li> <!-- Buscador -->
+            </ul>
+        </nav>
         </header>
-        <div class="INICIO">
+        <div class="INICIO" id="inicio">
             <h1>AHORA TE ENCUESTRAS EN LA FILA VIRTUAL</h1>
             <P>Estás en línea para <b>K-ERA</b>. Cuando sea tu turno, tendrás 15 minutos para entrar al sitio web.</p>
                 <p><b><em><u>¿Qué es esto?</u></em></b></p>
@@ -21,14 +32,15 @@
                     GIF FILA VIRTUAL
             <div class="MENSAJE">
                 <p><b>Última actualización del mensaje:</b></p>
-                <p><em>¿Qué era el K-pop hace 35 años?</em></p>
+                <p><em>¿Qué era el K-POP hace 35 años?</em></p>
                 <p>¡Bienvenidos/as a K-ERA! Un espacio dedicado a todos los fanáticos del K-POP. Aquí podrás explorar la evolución de esta industria desde sus inicios hasta el día el hoy. Además, de poder encontrar respuesta a todas las preguntas que alguna vez como fan (o sin ser fan, pero motivado por la curiosidad) nos hemos cuestionado sobre el K-POP y su evolución.</p>
             </div>
         </div>
+        <hr>
              BLOQUE COLOR DIVISIÓN 
              ESQUINA IZQUIERDA: PLAYLIST 
 
-        <div class="PARTE2, HISTORIA">
+        <div class="PARTE2, HISTORIA" id="historia">
         <h1>HISTORIA DEL K-POP</h1>
 
         GIF FILA VIRTUAL EN LA MITAD 
@@ -42,7 +54,7 @@
        TARJETA DE LOS GRUPOS (+INFO)
         </div>
 
-        <div class="PARTE3, EXPANSIÓN">
+        <div class="PARTE3, EXPANSIÓN" id="expansión">
         <h1>EXPANSIÓN DEL K-POP</h1>
         GIF FILA VIRTUAL TERMINANDO 
 
@@ -52,7 +64,7 @@
         </div>
 
 
-        <div class="PARTE4, GENERACIONES">
+        <div class="PARTE4, GENERACIONES" id="generaciones">
             <h1>GENERACIONES: ¿SABÍAS QUÉ?</h1>
 
             Imagen escenario + lista de las zonas 
@@ -76,7 +88,7 @@
 
         </div>
 
-        <div class="PARTE5, PRECIOS">
+        <div class="PARTE5, PRECIOS" id="precios">
             <h1>PRECIOS</h1>
             
             <h4>VARIACIÓN PRECIOS A CONCIERTOS</h4>
@@ -100,7 +112,7 @@
         </div>
 
 
-        <div class="PARTE 6, EXPECTATIVAS">
+        <div class="PARTE 6, EXPECTATIVAS" id="expectativas">
         <h1>EXPECTATIVAS</h1>
 
         <h4>CONCLUSIONES Y ALCANCE ESPERADO</h4>
@@ -109,6 +121,8 @@
         !TARJETA CON LOS COMENTARIOS DE CADA UNA!
 
         </div>
-        
+        <footer>
+            <img src="imagenes/LOGO.png">
+        </footer>
     </body>
 </html>
