--- a/entrega_05/index.html
+++ b/entrega_05/index.html
@@ -28,16 +28,17 @@
             <h1>AHORA TE ENCUESTRAS EN LA FILA VIRTUAL</h1>
             <P>Estás en línea para <b>K-ERA</b>. Cuando sea tu turno, tendrás 15 minutos para entrar al sitio web.</p>
                 <p><b><em><u>¿Qué es esto?</u></em></b></p>
-
-                    GIF FILA VIRTUAL
+                <img src="imagenes/FILA_VIRTUAL_1.gif">
             <div class="MENSAJE">
-                <p><b>Última actualización del mensaje:</b></p>
-                <p><em>¿Qué era el K-POP hace 35 años?</em></p>
+                <p><b>Última actualización del mensaje:<em>¿Qué era el K-POP hace 35 años?</em></b></p>
                 <p>¡Bienvenidos/as a K-ERA! Un espacio dedicado a todos los fanáticos del K-POP. Aquí podrás explorar la evolución de esta industria desde sus inicios hasta el día el hoy. Además, de poder encontrar respuesta a todas las preguntas que alguna vez como fan (o sin ser fan, pero motivado por la curiosidad) nos hemos cuestionado sobre el K-POP y su evolución.</p>
             </div>
+              <div class="spotify">
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5v6c1x2XlKyW5k9mHNryFj?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            </div> 
         </div>
-        <hr>
-             BLOQUE COLOR DIVISIÓN 
+   
+        BLOQUE COLOR DIVISIÓN 
              ESQUINA IZQUIERDA: PLAYLIST 
 
         <div class="PARTE2, HISTORIA" id="historia">
