--- a/entrega_05/index.html
+++ b/entrega_05/index.html
@@ -25,32 +25,36 @@
         </nav>
         </header>
         <div class="INICIO" id="inicio">
-            <h1>AHORA TE ENCUESTRAS EN LA FILA VIRTUAL</h1>
+            <h1>AHORA TE ENCUENTRAS EN LA FILA VIRTUAL</h1>
             <P>Estás en línea para <b>K-ERA</b>. Cuando sea tu turno, tendrás 15 minutos para entrar al sitio web.</p>
                 <p><b><em><u>¿Qué es esto?</u></em></b></p>
                 <img src="imagenes/FILA_VIRTUAL_1.gif">
             <div class="MENSAJE">
-                <p><b>Última actualización del mensaje:<em>¿Qué era el K-POP hace 35 años?</em></b></p>
-                <p>¡Bienvenidos/as a K-ERA! Un espacio dedicado a todos los fanáticos del K-POP. Aquí podrás explorar la evolución de esta industria desde sus inicios hasta el día el hoy. Además, de poder encontrar respuesta a todas las preguntas que alguna vez como fan (o sin ser fan, pero motivado por la curiosidad) nos hemos cuestionado sobre el K-POP y su evolución.</p>
+                <p><b>Última actualización del mensaje: <em>¿Qué era el K-POP hace 35 años?</em></b></p>
+                <p>¡Bienvenidos/as a K-ERA! Un espacio dedicado a todos los fanáticos del K-pop. Aquí podrás explorar la evolución de esta industria desde sus inicios hasta el día el hoy. Además, de poder encontrar respuesta a todas las preguntas que alguna vez como fan (o sin ser fan, pero motivado por la curiosidad) nos hemos cuestionado sobre el K-pop y su evolución.</p>
              <div class="spotify">
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5v6c1x2XlKyW5k9mHNryFj?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             </div> 
             </div>
         </div>
-   
-        BLOQUE COLOR DIVISIÓN 
-             ESQUINA IZQUIERDA: PLAYLIST 
-
-        <div class="PARTE2, HISTORIA" id="historia">
+<hr>
+        <div class="HISTORIA" id="historia">
         <h1>HISTORIA DEL K-POP</h1>
 
-        GIF FILA VIRTUAL EN LA MITAD 
+        <p><b><em><u>¡Ya queda menos para que entres!</u></em></b></p>
 
-        <p>El concepto original se remonta al año 1985 cuando el misionario estadounidense Henry Appenzeller comenzó a enseñarle a sus estudiantes canciones folk británicas y estadounidenses con letras coreanas. En la década del 90 apareció el primer grupo de K-pop, Seo Taiji and Boys, el cuál participó en un show de talentos, pero obtuvo el puntaje más bajo entre todos los participantes.</p>
+        <img src="imagenes/FILA_VIRTUAL_2.gif">
 
-        <p>Sin embargo, con su primera canción, llamada Nan Arayo (I Know) alcanzaron el primer lugar en las listas de singles coreanos, y se mantuvieron en el número uno por 17 semanas consecutivas. Este grupo cantaba sobre: moda, presión social, y la realidad del sistema educativo coreano, entre otros.</p>
+        <div class="MENSAJE">
 
-       <p>Seo Taiji and Boys se separaron en 1996, mismo año en que tres estudios musicales aparecieron en la escena: SM Entertainment, JYP Entertainment y YG Entertainment. Estos estudios, conocidos como los "Big Three" comenzaron a crear grupos de ídolos K-pop. El fundador de SM Entertainment, convocó a cinco cantantes y bailarines, para luego entrenarlos para ser el primer grupo de ídolos de K-pop, el grupo H.O.T.</p>
+        <p><b>Última actualización del mensaje: <em>Un viaje al pasasado</em></b></p>
+
+        <p>El concepto original se remonta al año 1985 cuando el misionario estadounidense Henry Appenzeller comenzó a enseñarle a sus estudiantes canciones folk británicas y estadounidenses con letras coreanas. En la década del 90 apareció el primer grupo de K-pop, <b><a href="https://drama.fandom.com/es/wiki/Seo_Taiji_and_Boys">Seo Taiji and Boys</a></b>, el cuál participó en un show de talentos, pero obtuvo el puntaje más bajo entre todos los participantes.</p>
+
+        <p>Sin embargo, con su primera canción, llamada <b><a href="https://youtu.be/OEDHEzs5kyk">Nan Arayo (I Know)</a></b> alcanzaron el primer lugar en las listas de singles coreanos, y se mantuvieron en el número uno por 17 semanas consecutivas. Este grupo cantaba sobre: moda, presión social, y la realidad del sistema educativo coreano, entre otros.</p>
+
+       <p>Seo Taiji and Boys se separaron en 1996, mismo año en que tres estudios musicales aparecieron en la escena: <b><a href="https://drama.fandom.com/es/wiki/Categor%C3%ADa:SM_Entertainment">SM Entertainment</a></b>, <b><a href="https://drama.fandom.com/es/wiki/Categor%C3%ADa:JYP_Entertainment">JYP Entertainment</a></b> y <b><a href="https://drama.fandom.com/es/wiki/Categor%C3%ADa:YG_Entertainment">YG Entertainment</a></b>. Estos estudios, conocidos como los <em>"Big Three"</em>, comenzaron a crear grupos de ídolos K-pop. El fundador de SM Entertainment convocó a cinco cantantes y bailarines, para luego entrenarlos para ser el primer grupo de ídolos de K-pop, el grupo <b><a href="https://drama.fandom.com/es/wiki/H.O.T.">H.O.T.</a></b></p>
+
 
        <div class="container">
         <div class="card">
@@ -75,19 +79,29 @@
             <p>Raperos: Woo Hyuk</p>
             <p>Vocalista: Tony An</p>
             <img src="imagenes/código_hot.png" alt="Código QR" class="qr-code">
-        </div>
+        </div>    
+    </div>
     </div>
         </div>
+    <hr>
 
-        <div class="PARTE3, EXPANSIÓN" id="expansión">
+    <div class="EXPANSIÓN" id="expansion">
         <h1>EXPANSIÓN DEL K-POP</h1>
-        GIF FILA VIRTUAL TERMINANDO 
 
-        <p>Estado actual del K-pop</p>
-         REDACTAR...
+        <p><b><em><u>¡Ya casi estás ahí!</u></em></b></p>
 
-        </div>
+       <img src="imagenes/FILA_VIRTUAL_3.gif">
 
+       <div class="MENSAJE"> 
+        <p><b>Última actualización del mensaje: <em>El K-pop en la actualidad</em></b></p>
+        <p>El género se ha ido expandiendo de a poco en el mercado global, ya no solo dominando mercados asiáticos, sino también adquiriendo fuerza en América Latina, Europa y Estados Unidos, donde grupos como <b><a href="https://drama.fandom.com/es/wiki/">BTS</a></b> y <a href="https://drama.fandom.com/es/wiki/BLACKPINK"><b>BLACKPINK</b></a> han encabezado rankings como Billboard y han realizado colaboraciones con grandes exponentes como Coldplay, Lady Gaga, Dua Lipa o Rosalía. </p>
+        <p>Los grupos cada vez realizan giras más ambiciosas, explorando la capacidad de su público con conciertos en grandes estadios internacionales, en muchos casos logrando llenar capacidades por sobre los 50.000 asistentes. </p>
+        <p>Si bien ha habido presentaciones de diversos exponentes del género en casi todos los continentes, aún falta explorar mercados como el de África y partes de Medio Oriente, donde existe un creciente interés por <em>"la ola coreana"</em>, pero aún no se han desarrollado estrategias sólidas de promoción, giras o colaboraciones culturales que potencien esa conexión. </p>
+       <iframe src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2Fmtvsur%2Fvideos%2F1103460661317071%2F&show_text=false&width=476&t=0" width="700px" height="476" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
+      </div>
+    </div>
+
+<hr>
 
         <div class="PARTE4, GENERACIONES" id="generaciones">
             <h1>GENERACIONES: ¿SABÍAS QUÉ?</h1>
