--- a/entrega_05/index.html
+++ b/entrega_05/index.html
@@ -118,15 +118,24 @@
 
             <p>Las generaciones en el K-pop existen para representar la evolución de esta industria, clasificando a todos los grupos que debutaron en un cierto periodo de etapas de desarrollo. Las generaciones no solo marcan un cambio de los grupos y artistas que están activos (es decir, continúan sacando música), sino que también demuestran un cambio en los estilos musicales, estrategias de marketing, globalización del género y el impacto cultural.</p>
 
-            <p><u>Aquí una pequeña guía de las generaciones:</u></p>
+            <p><u>Importante:</u>el cuándo comienza y termina una generación no está determinado por una fecha o condición, y la transición entre las nuevas generaciones puede ser confusa porque en las primeras existía una diferencia “evidente”.</p>
+
+            <p><strong>Características de cada generación:</strong></p>
 
             <ul>
                 <li><b>Primera generación (1990-2002):</b> También conocido como la <em>“generación de las leyendas”</em> porque es cuando nace y se desarrolla esta industria.</li>
                 <li><b>Segunda generación (2003-2011):</b> Esta generación se considera la <em>“Edad de Oro”</em> porque comienzan los primeros pasos de la expansión global del género. Además, que sentaron las bases de costumbres que existen dentro de esta industria. Por ejemplo, las photocards con Girls´ Generation, los lightsticks con Big Bang, y los dance practice con SHINee.</li>
                 <li><b>Tercera generación (2012-2017):</b> Es recordada como aquella época en la cual el género se expandió mundialmente y la cual le ha dado la fama, en gran parte por el uso de redes sociales y el continuar con los cambios de la generación pasada al comenzar a explorar géneros más allá del pop clásico para comenzar a incursionar en estilos como el techno, rock, house tropical, etc.</li>
-                <li><b>Cuarta generación (2018-2022):</b></li>
+                <li><b>Cuarta generación (2018-2022):</b>Es la generación más difusa porque no existe un consenso en la fecha o condición que marque su inicio, porque mientras algunos medios hablaban ya de esta generación mientras que la generación pasada aún era dominante. Sin embargo, varias personas afirman que no es posible comparar a los grupos que debutaron a partir de 2017-2018 con aquellos grupos de inicio de década. 
+                Con esto claro, lo que caracteriza a esta generación es un fuerte uso de medios digitales, y que los grupos se dirigieron desde muy sus inicios al mercado musical mundial. Sin embargo, podemos decir que esta generación es la más competitiva que las anteriores porque, aunque hay varios grupos que alcanzan la cima en listas, muchos otros se disuelven en poco tiempo. De hecho, aquí entre grupos interactúan menos públicamente, a diferencia de sus antecesores que compartían eventos y podíamos verlos interactuar.</li>
                 <li><b>Quinta generación (2023-presente):</b></li>
             </ul>
+
+            <p><strong>Algunos grupos de cada generación:</strong> </p>
+
+            <img src="imagenes/GIF_GEN.gif" class="gif-gen">
+
+            <p><strong>Carrusel de fotos de hitos:</strong></p>
 
             !AQUÍ VOY A PONER UN CARRUSEL DE FOTOS CON JAVA PARA MOSTRAR LAS PRIMERAS PHOTCARDS, LIGHTSTICKS Y ESAS COSAS!
             
