--- a/entrega_05/index.html
+++ b/entrega_05/index.html
@@ -133,7 +133,7 @@
 
             <p><strong>Algunos grupos de cada generación:</strong> </p>
 
-            <img src="imagenes/GIF_GEN.gif" class="gif-gen">
+            <img src="imagenes/GIF_GENERACIONES.gif" class="gif-gen">
 
             <p><strong>Carrusel de fotos de hitos:</strong></p>
 
